Added navbar, Taghelpers and courses views

--- a/BookStore/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/BookStore/Views/Home/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿
-
+@{
+    ViewData["Title"] = "Home";
+ }
 <section class="jumbotron text-center">
     <div class="container">
-        <h1>WElcome to bookstore</h1>
+        <h1>Welcome to bookstore</h1>
         <p class="lead text-muted">
-            testing content
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
         </p>
         <p> <a href="#" class="btn btn-danger">Search Book</a></p>
     </div>
