--- a/BookStore/BookStore/Views/Book/GetById.cshtml
+++ b/BookStore/BookStore/Views/Book/GetById.cshtml
@@ -2,6 +2,18 @@
 @{
     ViewData["Title"] = "GetById";
 }
+@model BookModel
+<div class="container">
+    <h4>@Model.BookName By @Model.AutherName</h4>
+    <div class="row">
+        <div class="card">
+            <img class="card-img-top" src="~/img/@Model.Image" alt="Bologna">
+            <div class="card-body">
+                <h4 class="card-title">@Model.BookName</h4>
+                <h6 class="card-subtitle mb-2 text-muted">@Model.AutherName</h6>
+                <p class="card-text">@Model.Description </p>
 
-<h1>GetById</h1>
-
+            </div>
+        </div>
+    </div>
+</div>
