--- a/BookStore/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/BookStore/Views/Home/Index.cshtml
@@ -9,6 +9,26 @@
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
         </p>
         <p> <a href="#" class="btn btn-danger">Search Book</a></p>
+
+        
     </div>
 </section>
+<div class="container">
+    <div class="row">
 
+        @foreach (BookModel book in Model)
+        {
+            <a asp-route="bookDetails" asp-route-id="@book.Id">
+                <div class="card" style="width:17rem;">
+                    <img class="card-img-top" src="~/img/@book.Image" alt="Card image top">
+                    <div class="card-body">
+                        <h5 class="card-title">@book.BookName</h5>
+                        <h6 class="card-subtitle">@book.AutherName</h6>                        
+                    </div>
+                </div>
+            </a>
+        }
+
+
+    </div>
+</div>
