--- a/BookStore/BookStore/Views/Book/AddNew.cshtml
+++ b/BookStore/BookStore/Views/Book/AddNew.cshtml
@@ -7,10 +7,10 @@
 
 <h1>Add New Book</h1>
 
-@if (ViewBag.isSuccess)
+@if (ViewBag.isSuccess == true)
 {
     <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <strong>Congratulation!</strong> You have successfully added a new book. <br />Click here to view details.
+        <strong>Congratulation!</strong> You have successfully added a new book. <br />Click <a asp-route="bookDetails" asp-route-id="@ViewBag.Id">here</a> to view details.
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
@@ -21,14 +21,17 @@
     <div class="form-group">
         <label asp-for="BookName"></label>
         <input asp-for="BookName" class="form-control" />
+        <span asp-validation-for="BookName" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="AutherName"></label>
         <input asp-for="AutherName" class="form-control" />
+        <span asp-validation-for="AutherName" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Description"></label>
-        <input asp-for="Description" class="form-control" />
+        <textarea asp-for="Description" class="form-control"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
     <div class="form-group">
