--- a/BookStore/BookStore/Views/Book/AddNew.cshtml
+++ b/BookStore/BookStore/Views/Book/AddNew.cshtml
@@ -18,6 +18,7 @@
 }
 
 <form method="post">
+    <div class="text-danger" asp-validation-summary="All"></div>
     <div class="form-group">
         <label asp-for="BookName"></label>
         <input asp-for="BookName" class="form-control" />
