--- a/BookStore/BookStore/Views/Book/AddNew.cshtml
+++ b/BookStore/BookStore/Views/Book/AddNew.cshtml
@@ -20,6 +20,13 @@
 <form method="post">
     <div class="text-danger" asp-validation-summary="All"></div>
     <div class="form-group">
+        <label asp-for="Language"></label>
+        <select asp-for="Language" class="form-control" asp-items="ViewBag.language">
+            <option value="">Choose Book Language</option>                       
+        </select>
+        <span asp-validation-for="Language" class="text-danger"></span>
+    </div>
+    <div class="form-group">
         <label asp-for="BookName"></label>
         <input asp-for="BookName" class="form-control" />
         <span asp-validation-for="BookName" class="text-danger"></span>
