--- a/BookStore/BookStore/Views/Home/Index.cshtml
+++ b/BookStore/BookStore/Views/Home/Index.cshtml
@@ -22,8 +22,9 @@
                 <div class="card" style="width:17rem;">
                     <img class="card-img-top" src="~/img/@book.Image" alt="Card image top">
                     <div class="card-body">
-                        <h5 class="card-title">@book.BookName</h5>
-                        <h6 class="card-subtitle">@book.AutherName</h6>                        
+                        <h5 class="card-title">Name: @book.BookName</h5>
+                        <h6 class="card-subtitle">Auther Name: @book.AutherName</h6>
+                        <h6 class="card-title">Language: @book.LanguageName</h6>
                     </div>
                 </div>
             </a>
