--- a/BookStore/BookStore/Views/Book/AddNew.cshtml
+++ b/BookStore/BookStore/Views/Book/AddNew.cshtml
@@ -20,11 +20,11 @@
 <form method="post">
     <div class="text-danger" asp-validation-summary="All"></div>
     <div class="form-group">
-        <label asp-for="Language"></label>
-        <select asp-for="Language" class="form-control" asp-items="ViewBag.language">
+        <label asp-for="LanguageId"></label>
+        <select asp-for="LanguageId" class="form-control" asp-items="ViewBag.language">
             <option value="">Choose Book Language</option>                       
         </select>
-        <span asp-validation-for="Language" class="text-danger"></span>
+        <span asp-validation-for="LanguageId" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="BookName"></label>
